# iot-alx

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
alx-app/: .env  README.md  package-lock.json  package.json  vue.config.js
alx-app/public/: index.html
alx-app/src/: App.vue  main.js
alx-app/src/plugins/: vuetify.js
docs/: HW-PLATFORM.txt  README.txt
main/: CMakeLists.txt  main.cpp  mode_base.cpp  mode_constant.cpp  mode_power_down.cpp  mode_power_up.cpp  mode_power_up.h  mode_tdc.cpp  mode_xmas.cpp  rest_server.cpp
main/include/: alx.h  alx_types.h  local_settings.h-skeleton  mode_base.h  mode_constant.h  mode_power_updown.h  mode_tdc.h  mode_xmas.h
tools/: html-js-shorten-filenames.pl
